PTFrontend/test/multiple_files/simple_fail/SimpleP.ptjava
package testInst {
    inst test;

    // error: no  class c
    class C adds {
          int x;
    }
}
